[JSC] Yarr::ByteTerm sometimes leaves fields uninitialized https://bugs.webkit.org/show_bug.cgi?id=229891

Reviewed by Yusuke Suzuki.

* yarr/YarrInterpreter.h:
(JSC::Yarr::ByteTerm::ByteTerm):
Default initialize `frameLocation` and `inputPosition`.
(Also, use initializer list where possible.)


Canonical link: https://commits.webkit.org/241328@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@282023 268f45cc-cd09-0410-ab3c-d52691b4dbfc